added hereby declaration and fixed typos

--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -2,5 +2,5 @@
 This paper presents the concept of microbundles as introduced in 1964 by John Milnor. After showing some basic properties and constructions, including the induced microbundle and the Whitney sum, we discuss tangent- and normal microbundles over topological manifolds. We prove that for every microbundle over a simplicial complex, there exists an inverse in respect to the Whitney sum. Furthermore, we show that homotopic maps yield isomorphic induced microbundles. These results permit the proof that every topological submanifold $N \sub M$ has a normal microbundle in a stabilization $M \cross \R^q$ of the surrounding manifold.
 \vspace*{0.25cm}
 
-Deutsch: In dieser Arbeit wird das Konzept von Mikrobündeln \break präsentiert,welches 1964 von John Milnor eingeführt wurde. Nachdem wir einige grundlegende Eigenschaften und Konstruktionen für Mikrobündel eingeführt haben, untersuchen wir tangential- und normalen Mikrobündel über topologischen Mannigfaltigkeiten. Wir zeigen, dass für jedes \break Mikrobündel über einem simplizialen Komplex ein Inverses in Bezug auf die Whitney-Summe existiert. Außerdem zeigen wir das homotope Abbildungen isomorphe induzierte Mikrobündel erzeugen. Mithilfe dieser Ergebnisse beweisen wir schließlich dass jede topologische Untermannigfaltigkeit $N \sub M$ ein normalen Mikrobündel in einer Stabilisierung $M \cross \R^q$ der umgebenden Mannigfaltigkeit besitzt.
+Deutsch: In dieser Arbeit wird das Konzept von Mikrobündeln \break präsentiert,welches 1964 von John Milnor eingeführt wurde. Nachdem wir einige grundlegende Eigenschaften und Konstruktionen, mitunter die der induzierten Mikrobündel und der Whitney Summe, eingeführt haben, untersuchen wir tangential- und normalen Mikrobündel über topologischen Mannigfaltigkeiten. Wir zeigen, dass für jedes Mikrobündel über einem simplizialen Komplex ein Inverses in Bezug auf die Whitney-Summe existiert. Außerdem zeigen wir, dass homotope Abbildungen isomorphe induzierte Mikrobündel erzeugen. Mithilfe dieser Ergebnisse beweisen wir schließlich, dass jede topologische Untermannigfaltigkeit $N \sub M$ ein normalen Mikrobündel in einer Stabilisierung $M \cross \R^q$ der umgebenden Mannigfaltigkeit besitzt.
 \end{abstract}
