--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,4 +1,5 @@
-\begin{myparagraph} Given a smooth (=$C^\infty$) manifold $M$, one can define the tangent space in a point $p \in M$ over `derivations' in $\mathcal{L}(C^\infty(M), \R^n)$ or over `tangent curves' in $C^\infty((-1, 1), M)$.
+\begin{myparagraph}
+Given a smooth (=$C^\infty$) manifold $M$, one can define the tangent space in a point $p \in M$ over `derivations' in $\mathcal{L}(C^\infty(M), \R^n)$ or over `tangent curves' in $C^\infty((-1, 1), M)$.
 
 The tangent space allows for the definition of the tangent bundle \[ TM = \bigsqcup_{p \in M} T_p M\] together with the projection \[ TM \xto{\pi} M, \pi(p, \nu) = p. \]
 
@@ -20,6 +21,7 @@ In order to develop this approach, Milnor introduces a new type of bundle that g
 
 The theory of microbundles over topological manifolds reaches even further, allowing for the definition of a microbundle analogue to the normal bundle. Given a smooth submanifold $P \sub M$, there always exists a normal bundle $NP$ defined fiber-wise by \[ N_p P = T_p M / T_p N. \] In contrast to this, the two mathematicians C. Rourke and B. Sanderson could construct a $19$-dimensional manifold embedded in $S^{29}$ that does not admit a normal microbundle \cite{rourke}. So the existence of a normal microbundle of a submanifold $N \sub M$ is not guaranteed. Instead, Milnor could show that there always exists a normal microbundle of $N$ in a stabilization $M \cross \R^q$ for some $q \in \N$ (see Milnors \myintref{normal::milnor}).
 
-The question of an analogue to the tangent bundle for topological manifolds is not only of intrinsic interest. For example, Milnors studies on microbundles allowed Robert Williamson to transfer results in cobordism theory developed by Réne Thom, in particular the concept of transverse regularity, from the smooth category over to the piecewise category (see \cite[§3]{williamson}).
+The question of an analogue to the tangent bundle for topological manifolds is not only of theoretical interest. For example, Milnors studies on microbundles allowed Robert Williamson to transfer results in cobordism theory developed by Réne Thom, in particular the concept of transverse regularity, from the smooth category over to the piecewise category (see \cite[§3]{williamson}).
 
-This thesis presents the concept of microbundles as introduced in 1964 by John Milnor, providing a proof for the above theorem about the existence of normal microbundles. It is based on Milnors paper `Microbundles, Part I'. \end{myparagraph}
+This thesis presents the concept of microbundles as introduced in 1964 by John Milnor, providing a detailed proof for Milnors Theorem. It is based on Milnors paper `Microbundles, Part I'\cite{milnor}.
+\end{myparagraph}
