--- a/src/sections/normal/parts/milnor.tex
+++ b/src/sections/normal/parts/milnor.tex
@@ -9,6 +9,7 @@ We show the theorem in multiple steps. \begin{steps} \item $N$ has a normal micr
 Consider the extension $\ind{r}\bt_N$ for $\bt_N$. Since $V$ is an open set, it's a simplicial complex. Hence, we can apply \myintref{whitney::theorem} to $\ind{r}\bt_N$ to obtain a microbundle $\eta'$ such that $\whitney{\ind{r}\bt_N}{\eta'} \cong \be[q]{V}$.
 
 We conclude that $\whitney{\bt_N}{\eta'\restr{N}} = \whitney{\ind{r}\bt_N\restr{N}}{\eta'\restr{N}} \cong (\whitney{\ind{r}\bt_N}{\eta'})\restr{N} \cong \be[q]{N}$.
+The statement follows with $\eta = \eta'\restr{N}$.
 
 \item $E(\rtn)$ has a normal microbundle in $E(\rwhitney)$
 
