--- a/src/sections/normal/parts/uniqueness.tex
+++ b/src/sections/normal/parts/uniqueness.tex
@@ -1,6 +1,6 @@
-\begin{myparagraph} Unlike the normal vector bundle for smooth manifolds, the normal microbundle is not defined in a constructive manner. Therefore, the question arises in which sense the normal microbundle of a submanifold $N \sub M$ is unique. In fact, it is unknown whether a such normal microbundle is unique up to isomorphy. Instead, we have the following statement about uniqueness. \end{myparagraph}
+\begin{myparagraph} Unlike the normal vector bundle for smooth manifolds, the normal microbundle is not defined in a constructive manner. Therefore, the question arises in which sense the normal microbundle of a submanifold $N \sub M$ is unique. In fact, it is unknown whether such a normal microbundle is unique up to isomorphy. Instead, we have the following statement about uniqueness. \end{myparagraph}
 
-\begin{mystatement}{proposition}{normal::uniqueness}[63] Let $N \sub M$ be an embedded submanifold. Suppose there exists a normal microbundle $\bundledef{\bn}{N}{U}{\iota}{r}$ in $M$. Then $\bt_N \oplus \bn \cong \bt_M\restr{N}$. \end{mystatement}
+\begin{mystatement}{proposition}{normal::uniqueness}[63] Let $N \sub M$ be a submanifold. Suppose there exists a normal microbundle $\bundledef{\bn}{N}{U}{\iota}{r}$ in $M$. Then $\bt_N \oplus \bn \cong \bt_M\restr{N}$. \end{mystatement}
 
 \begin{myparagraph} In order to prove this, we require another construction over microbundles, the composition. \end{myparagraph} \input{src/sections/normal/parts/composition}
 
