--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -6,7 +6,7 @@
 
 \vspace*{1cm}
 
-\begin{LARGE}\textbf{Microbundles on Toplogical Manifolds}\end{LARGE}
+\begin{LARGE}\textbf{Microbundles on Topological Manifolds}\end{LARGE}
 
 \vspace*{1cm}
 
@@ -26,7 +26,7 @@ Betreut durch Prof. Dr. Markus Banagl
 Ruprecht-Karls-Universität Heidelberg\\ Fakultät für Mathematik und Informatik\\ Im Neuenheimer Feld 205, 69120 Heidelberg
 
 \vspace{0.5cm}
-22. Juni 2024
+1. Juli 2024
 \end{large}
 \end{center}
 \end{titlepage}
