--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,8 @@
 
 \begin{document}
 \input{src/titlepage}
+\input{src/hereby}
+\clearpage
 \input{src/abstract}
 \tableofcontents
 \clearpage
@@ -11,7 +13,7 @@
 \subsection*{Motivation}\label{section::motivation}
 \input{src/introduction}
 \subsection*{Conventions}
-Throughout this thesis, we require that every manifold is paracompact and second-countable. Unless explicitly stated, manifolds are not equipped with a differentiable structure. With a submanifold $N \sub M$, we mean an embedded submanifold $N$ in $M$.
+Throughout this thesis, we require that every manifold is paracompact and second-countable. Unless explicitly stated, manifolds are not equipped with a differentiable structure. A submanifold $N \sub M$ is required to be an embedded submanifold $N$ in $M$.
 \subsection*{Introduction to Microbundles}\label{section::microbundle}
 \input{src/sections/microbundle/section}
 \section{Standard Constructions}\label{chapter::constructions}
