fixed milnors theorem

--- a/refs.bib
+++ b/refs.bib
@@ -142,6 +142,13 @@
   year      = {1967},
   publisher = {Springer-Verlag}
 }
+@book{tom,
+  title     = {Algebraic topology},
+  author    = {tom Dieck, Tammo},
+  volume    = {8},
+  year      = {2008},
+  publisher = {European Mathematical Society}
+}
 @article{whitehead,
   title     = {Manifolds with transverse fields in euclidean space},
   author    = {Whitehead, J Henry C},
