--- a/src/sections/normal/section.tex
+++ b/src/sections/normal/section.tex
@@ -1,3 +1,3 @@
-\subsection*{The Normal Microbundle}\label{section::normal} \input{src/sections/normal/parts/definition} \input{src/sections/normal/parts/uniqueness} \subsection*{Milnors Theorem}\label{section::milnor} \begin{myparagraph} Lastly, we will use all the substantial results presented in this thesis in order to prove Milnors \myintref{normal::milnor}. \end{myparagraph} \input{src/sections/normal/parts/transitivity} \begin{myparagraph} For the remainder of this section, we utilize the fact that for every submanifold $N \sub M$, $N$ is an absolute neighborhood retract (ANR) in $M$, i.e, there exists an open neighborhood $V \sub M$ of $N$ together with a retraction $r: V \to N$. For a proof, see Theorem 3.3 in \cite{hanner}.
+\subsection*{The Normal Microbundle}\label{section::normal} \input{src/sections/normal/parts/definition} \input{src/sections/normal/parts/uniqueness} \subsection*{Milnors Theorem}\label{section::milnor} \begin{myparagraph} Lastly, we will use all the substantial results presented in this thesis in order to prove Milnors \myintref{normal::milnor}. \end{myparagraph} \input{src/sections/normal/parts/transitivity} \begin{myparagraph} For the remainder of this section, we utilize the fact that every manifold is an absolute neighborhood retract (ANR). For a proof, see Theorem 3.3 in \cite{hanner}. It follows that for every submanifold $N \sub M$, there exists an open neighborhood $V \sub M$ of $N$ together with a retraction $r: V \to N$.
 
 \end{myparagraph} \input{src/sections/normal/parts/totalspace} \input{src/sections/normal/parts/milnor}
