--- a/src/sections/normal/parts/milnor.tex
+++ b/src/sections/normal/parts/milnor.tex
@@ -2,27 +2,34 @@
 
 \begin{mystatement}{theorem}[Milnors Theorem]{normal::milnor}[62] Let $N \sub M$ be a submanifold. For a sufficiently large $q \in \N$, $N = \cyldown{N}$ has a normal microbundle in $M \cross \R^q$. \end{mystatement}
 
-\begin{myproof} We assume that $M$ is embedded in Euclidean space $\R^{2m + 1}$ \cite[p.60]{dimension}. Additionally, let $V$ be an open neighborhood of $N$ in $M$ together with a retraction $r: V \to N$.
+\begin{myproof} Let $V$ be an open neighborhood of $N$ in $M$ together with a retraction $r: V \to N$.
 
-We show the theorem in multiple steps. \begin{steps} \item $N$ has a normal microbundle $\eta$ in $E(\ind{r}\bt_N)$ such that $\whitney{\bt_N}{\eta} \cong \be[q]{N}$
+We show the theorem in multiple steps. \begin{steps} \item $N$ has a normal microbundle $\eta$ in $E(\ind{r}\bt_N)$
 
-Consider the extension $\ind{r}\bt_N$ for $\bt_N$. Since $V$ is an open set, it's a simplicial complex. Hence, we can apply \myintref{whitney::theorem} to $\ind{r}\bt_N$ to obtain a microbundle $\eta'$ such that $\whitney{\ind{r}\bt_N}{\eta'} \cong \be[q]{V}$.
+See \myintref{normal::total}.
 
-We conclude that $\whitney{\bt_N}{\eta'\restr{N}} = \whitney{\ind{r}\bt_N\restr{N}}{\eta'\restr{N}} \cong (\whitney{\ind{r}\bt_N}{\eta'})\restr{N} \cong \be[q]{N}$.
-The statement follows with $\eta = \eta'\restr{N}$.
+\item There exists a microbundle $\eta$ of $N$ such that $\bt_N \oplus \eta$ is trivial
+
+We'd like to apply \myintref{whitney::theorem}. However, this theorem requires the total space to be a finite dimensional simplicial complex. In order to suffice this requirement, we do a little trick:
+
+First, we embed $N$ in Euclidean space $\R^{2dim(N) + 1}$ (see \cite[p.60]{dimension}).
+Now, we utilize that every locally compact subset of Euclidean space can be embedded as a closed subset in Euclidean space of one dimension higher (\cite[prop. 18.4.2]{tom}).
+Since every manifold is an ANR, there exists an open neighborhood $W$ of this embedding of $N$ together with a retraction $r_W: W \to N$.
+Now, $W$ is a finite dimensional simplicial complex as an open set in Euclidean space.
+Finally, we apply \myintref{whitney::theorem} on $\ind{r_W}\bt_N$ and restrict the obtained inverse microbundle to $N$.
 
 \item $E(\rtn)$ has a normal microbundle in $E(\rwhitney)$
 
-Note that $\rwhitney \cong \ind{r}(\whitney{\bt_N}{\eta})$ is trivial. Hence, by restricting the total space $E(\rwhitney)$ if necessary, we may assume that \[ E(\rwhitney) = V \cross \R^q \] for some $q \in \N$. Particularly, we derive that $E(\rwhitney)$ is a manifold.
+Note that $\rwhitney \cong \ind{r}(\whitney{\bt_N}{\eta})$ is trivial. Hence, by restricting the total space $E(\rwhitney)$ if necessary, we may assume that \[ E(\rwhitney) \cong V \cross \R^q \] for some $q \in \N$. Particularly, we derive that $E(\rwhitney)$ is a manifold.
 
 We denote the injection and projection of $\rtn$ by $i_{\bt}$ and $j_{\bt}$, and the injection and projection of $\ind{r}\eta$ by $i_{\eta}$ and $j_{\eta}$.
 
-We consider $E(\rtn)$ to be a submanifold of $E(\rwhitney)$ embedded by \[ e \mapsto (e, j_{r}(i_{\eta}(e))). \] We have a normal microbundle of $E(\rtn)$ in $E(\rwhitney)$ given by $\ind{j_{\bt}}(\ind{r}\eta)$. That is because the total space \[ E(\ind{j_r}(\ind{r}\eta)) = \set{(e, e') \in E(\rtn) \cross E(\ind{r}\eta)}{j_{\bt}(e) = j_\eta(e')} \] equals $E(\rwhitney)$ and because its inclusion matches the above embedding.
+We consider $E(\rtn)$ to be a submanifold of $E(\rwhitney)$ embedded by \[ e \mapsto (e, i_{\eta}(j_{r}(e))). \] We have a normal microbundle of $E(\rtn)$ in $E(\rwhitney)$ given by $\ind{j_{\bt}}(\ind{r}\eta)$. That is because the total space \[ E(\ind{j_r}(\ind{r}\eta)) = \set{(e, e') \in E(\rtn) \cross E(\ind{r}\eta)}{j_{\bt}(e) = j_\eta(e')} \] equals $E(\rwhitney)$ and because its inclusion matches the above embedding.
 
 \item $N$ has a normal microbundle in $M \times \R^q$
 
 Since $N$ has a normal microbundle in $E(\rtn)$ (\myintref{microbundle::total}) and $E(\rtn)$ has a normal microbundle in $E(\rwhitney)$, we conclude with \myintref{normal::transitivity} that $N$ has a normal microbundle in $E(\rwhitney)$.
 
-As elaborated in Step 2, we may assume that $E(\rwhitney) = V \cross \R^n$. Since $V$ is open in $M$, $V \cross \R^n$ is open in $M \cross \R^n$. \end{steps} We conclude that $N$ has a normal microbundle in $M \cross \R^n$. \end{myproof}
+As elaborated in Step 2, we may assume that $E(\rwhitney) \cong V \cross \R^n$. Since $V$ is open in $M$, $V \cross \R^n$ is open in $M \cross \R^n$. \end{steps} We conclude that $N$ has a normal microbundle in $M \cross \R^n$. \end{myproof}
 
 \begin{myparagraph} With the provided proofs for \myintref{whitney::theorem} and \myintref{normal::milnor}, we can calculate an upper bound $m(2^{2m + 2} - 2)$ for $q$, where $m$ is the dimension of $M$ \cite[p.63]{milnor}. However, when provided with sharper proofs, one can substantially reduce the upper bound to a quadratic $(m + 1)^2 - 1$ (see \cite[p.232]{hirsch}). \end{myparagraph} \end{scope}
