--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -1,4 +1,4 @@
-\begin{mystatement}{lemma}{normal::total} Let $N \sub M$ be a submanifold and let $r: V \sub M \to N$ be a retraction. Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$.  \end{mystatement}
+\begin{mystatement}{lemma}{normal::total} Let $N \sub M$ be a submanifold and let $V$ be an open neighborhood of $N$ in $M$ together with a retraction $r: V \to N$. Then there exists a normal microbundle $\bn$ of $N$ in $E(\ind{r}\bt_N)$.  \end{mystatement}
 
 \begin{myproof} First, note that the total space $E(\ind{r}\bt_N)$ is a topological manifold. This can be seen with \[ E(\ind{r}\bt_N) = \set{(v, n_1, n_2) \in V \cross (N \cross N)}{r(v) = n_1} \cong V \cross N. \]
 
